# cpp_base_project

./: .clang-format  .gitignore  .travis.yml  README.md  appveyor.yml  meson.build  meson_options.txt
include/: meson.build  printer.hpp  version.hpp.in
src/: lib.cpp  main.cpp  meson.build
tests/: meson.build  test.cpp
